--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,4 @@ target
 .settings
 .project
 .classpath
-
-syntax: regexp
-^perfidix/target$
-^perfidix/.settings$
-^perfidix/.project
-^perfidix/.classpath
+storage.dat
